--- a/views/partials/create-form.hbs
+++ b/views/partials/create-form.hbs
@@ -11,6 +11,7 @@
         <div class="option" data-name="few"><span>FeW</span></div>
         <div class="option" data-name="wcr"><span>WCr</span></div>
         <div class="option" data-name="fenb"><span>FeNb</span></div>
+        <div class="option" data-name="vnal"><span>ВнАл</span></div>
       </div>
 
       <label for="nummelt">Номер шихты</label>
