--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -24,6 +24,12 @@
       {{else}}
         <li><a href="/site3">3 участок</a></li>
       {{/if}}
+
+      {{#if isSite4}}
+        <li class="active"><a href="/site4">4 участок</a></li>
+      {{else}}
+        <li><a href="/site4">4 участок</a></li>
+      {{/if}}
     </ul>
   </nav>
 </div>
