--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -30,6 +30,12 @@
       {{else}}
         <li><a href="/site4">4 участок</a></li>
       {{/if}}
+
+      {{#if addMaterial}}
+        <li class="active"><a href="/add-material">Добавить материал</a></li>
+      {{else}}
+        <li><a href="/add-material">Добавить материал</a></li>
+      {{/if}}
     </ul>
   </nav>
 </div>
